@@ -1,17 +1,18 @@
 package lu.forex.system.providers;
 
 import jakarta.validation.constraints.NotNull;
-import java.util.List;
+import java.util.Arrays;
+import java.util.Collection;
 import java.util.UUID;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
+import java.util.stream.IntStream;
 import lombok.AccessLevel;
 import lombok.AllArgsConstructor;
 import lombok.Getter;
 import lombok.extern.log4j.Log4j2;
 import lu.forex.system.dtos.OrderDto;
 import lu.forex.system.dtos.TickDto;
-import lu.forex.system.dtos.TradeDto;
+import lu.forex.system.entities.Order;
 import lu.forex.system.enums.OrderStatus;
 import lu.forex.system.mappers.OrderMapper;
 import lu.forex.system.mappers.TickMapper;
@@ -31,35 +32,36 @@ public class OrderProvider implements OrderService {
   private final TickMapper tickMapper;
 
   @Override
-  public @NotNull List<OrderDto> getOrders(final @NotNull UUID symbolId, final @NotNull OrderStatus orderStatus) {
-    return this.getOrderRepository().findByOpenTick_Symbol_IdAndOrderStatusOrderByOpenTick_TimestampAsc(symbolId, orderStatus).stream().map(this.getOrderMapper()::toDto).collect(Collectors.toList());
+  public @NotNull Collection<OrderDto> getOrders(final @NotNull UUID symbolId, final @NotNull OrderStatus orderStatus) {
+    return this.getOrderRepository().findByOpenTick_Symbol_IdAndOrderStatusOrderByOpenTick_TimestampAsc(symbolId, orderStatus).stream().map(this.getOrderMapper()::toDto).toList();
   }
 
   @Override
-  public @NotNull Stream<OrderDto> processingInitOrders(final @NotNull List<TickDto> tickDtoList, final @NotNull Stream<TradeDto> tradeDtos) {
-    log.info("Starting processingInitOrders({})", tickDtoList.getFirst().symbol().currencyPair().name());
-    final var orders = tradeDtos.parallel().flatMap(tradeDto -> tradeDto.orders().stream())
-        .map(orderDto -> this.getOrderRepository().findById(orderDto.id()).orElseThrow())
-        .map(order -> {
-          final List<TickDto> ticksFit = tickDtoList.stream().filter(tickDto -> tickDto.timestamp().isAfter(order.getCloseTick().getTimestamp())).toList();
-          for (final TickDto tickDto : ticksFit) {
-            final var tick = this.getTickMapper().toEntity(tickDto);
-            order.setCloseTick(tick);
-            order.setProfit(OrderUtils.getProfit(order));
-            if (order.getProfit() < 0D) {
-              if(Math.abs(order.getProfit()) > (double) order.getTrade().getStopLoss()) {
-                order.setOrderStatus(OrderStatus.STOP_LOSS);
-                break;
-              }
-            } else if (order.getProfit() >= (double) order.getTrade().getTakeProfit()) {
-              order.setOrderStatus(OrderStatus.TAKE_PROFIT);
-              break;
-            }
+  public void batchProcessingInitOrders(final @NotNull TickDto @NotNull [] ticksDto) {
+    log.info("Processing orders initiated");
+    final Order[] orders = this.getOrderRepository().findByOpenTick_Symbol_Id(ticksDto[0].symbol().id()).toArray(Order[]::new);
+    IntStream.range(0, orders.length).parallel().forEach(indexOrder -> {
+      final Order order = orders[indexOrder];
+      for(int i = IntStream.range(0, ticksDto.length).filter(t -> ticksDto[t].timestamp().isAfter(order.getCloseTick().getTimestamp())).findFirst().orElse(ticksDto.length); i < ticksDto.length; ++i){
+        order.setCloseTick(this.getTickMapper().toEntity(ticksDto[i]));
+        order.setProfit(OrderUtils.getProfit(order));
+        if (order.getProfit() < 0D) {
+          if(Math.abs(order.getProfit()) > order.getTrade().getStopLoss()) {
+            order.setOrderStatus(OrderStatus.STOP_LOSS);
+            break;
           }
-          return order;
-        }).toList();
+        } else if (order.getProfit() >= order.getTrade().getTakeProfit()) {
+          order.setOrderStatus(OrderStatus.TAKE_PROFIT);
+          break;
+        }
+      }
+    });
+    log.info("Updating orders initiated");
+    this.getOrderRepository().saveAll(Arrays.stream(orders).toList());
+  }
 
-    log.info("Ending processingInitOrders({})", tickDtoList.getFirst().symbol().currencyPair().name());
-    return this.getOrderRepository().saveAll(orders).stream().map(this.getOrderMapper()::toDto);
+  @Override
+  public Collection<OrderDto> getOrders(final @NotNull UUID symbolId) {
+    return this.getOrderRepository().findByOpenTick_Symbol_Id(symbolId).stream().map(this.getOrderMapper()::toDto).toList();
   }
 }
